fixed nav padding on mobile devices

--- a/components/Frame/Frame.module.scss
+++ b/components/Frame/Frame.module.scss
@@ -152,7 +152,7 @@
       pointer-events: auto;
       display: flex;
       @media screen and (max-width: 576px) {
-        padding: 1rem 1rem 2rem 5rem;
+        padding: 1rem 1rem 5rem 5rem;
       }
       ul {
         list-style: none;
